crates/plotnik-tests/tests/macro_ui/fail/depth_invalid.rs
plotnik::query! {
    "Q = (program)",
    grammar = "arborium-javascript",
    depth = nope,
}

fn main() {}
